# claude-config

./: .gitignore  .luarc.json  .pre-commit-config.yaml  CLAUDE.md  DECISION_LOG.md  Makefile  README.md  justfile  manifest  mise.local.toml.example  mise.toml  pyproject.toml  stylua.toml
.beads/: bd-track.yaml  config.yaml  issues.jsonl  metadata.json  queue.yaml
.beads/hooks/: pre-commit
.claude/: settings.json
claude/scripts/git-hooks/: justfile  pre-commit  pre-push
claude/scripts/hooks/: _git.lua  _lib.lua  audit-event.lua  config-guard.lua  git-guard.lua  git-guard.yaml  justfile
claude/scripts/hooks/tests/: README.md  _git_spec.lua  _lib_spec.lua  config-guard_spec.lua  git-guard_spec.lua
docs/: ROADMAP.md  SANDBOX_GUIDE.md  VISION.md
docs/architecture/: README.md  audit-log.md  hooks.md  install-map.md  repo-layout.md  sandbox-model.md  sandbox-runtime-view.md
docs/design/: README.md
docs/guides/: agent-conventions.md  etckeeper-protocol.md  oauth-bootstrap.md  profile-authoring.md  quickstart-sandbox.md  self-modification.md  troubleshooting.md
docs/migration/: auto-memory-migration-plan.md  bead-migration-plan.md  beads-init-plan.md
docs/research/: README.md  claude-code-sandboxing-survey.md
docs/specs/: README.md  phase6-worker-isolation.md
docs/transcripts/: 2026-05-04-sandbox-architecture-discussion.md  2026-05-27-polyglot-foundation-discussion.md
docs/usage/: README.md
sandbox/: justfile
sandbox/broker/: go.mod
sandbox/broker/cmd/claude-egress-broker/: main.go
sandbox/broker/internal/credentials/: credentials.go  credentials_test.go
sandbox/broker/internal/handler/: handler.go  handler_test.go
sandbox/broker/internal/notify/: notify.go  notify_test.go
sandbox/broker/internal/policy/: policy.go  policy_test.go
sandbox/broker/internal/server/: server.go  server_test.go
sandbox/broker/internal/wire/: wire.go  wire_test.go
sandbox/egress-policy/: README.md  anthropic-api.yaml
sandbox/egress-proxy/: README.md  anthropic-cdn.yaml
sandbox/etc/: gpg-agent.conf
sandbox/man/: claude-sandbox.1.scd
sandbox/profiles/: SCHEMA.md  default.yaml
sandbox/proxy/: go.mod
sandbox/proxy/cmd/claude-egress-proxy/: main.go
sandbox/proxy/internal/notify/: notify.go
sandbox/proxy/internal/policy/: policy.go  policy_test.go
sandbox/proxy/internal/server/: server.go  server_test.go
sandbox/proxy/internal/sniff/: sniff.go  sniff_test.go
sandbox/reference/egress-broker-python/: NOTICE.md
sandbox/reference/egress-broker-python/egress_broker/: handler.py
sandbox/reference/egress-broker-python/tests_egress_broker/: test_policy.py  test_server.py
sandbox/scripts/: _hooks-manifest.sh  _install-manifest.sh  check-lua-annotations.py  claude-egress-broker-healthcheck.sh  install-dev-tools.sh  prime-egress-broker.sh  provision-claude-egress.sh  provision-claude-session.sh  setup-claude-session-acls.sh  share-credential.sh  smoke-test.sh
sandbox/scripts/hooks/: config-guard.py
sandbox/systemd/: README.md  claude-egress-broker.service  claude-egress-broker.socket  claude-egress-proxy.service  claude-egress-proxy.socket
src/claude_config/: __init__.py
src/claude_config/egress_broker/: __init__.py  __main__.py  credentials.py  policy.py  server.py  wire.py
tests/: test_package_smoke.py
tests-bats/: test_install_manifest.bats
tests-lua/: README.md  _lib_spec.lua  audit-event_spec.lua  config-guard_spec.lua  git-guard_spec.lua
tests/egress_broker/: test_handler.py  test_wire.py
