[project]
name = "claude-config"
version = "0.0.0"
description = "Claude tooling and sandbox for this machine — skills, agents, slash commands, settings, sandbox infrastructure, and supporting Python utilities."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Michael Haynes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyYAML>=6.0",
]

# [project.scripts] — populated as Python tools land (DEC-019).
# The claude-egress-broker-py script was retired when the Go production
# broker landed (ClaudeConfig-1ic); the Python reference is preserved
# read-only under sandbox/reference/egress-broker-python/ and is no
# longer pip-installed. Operators who want to run the reference can
# invoke it directly: python -m egress_broker --policy-dir ... .

[build-system]
requires = ["uv_build>=0.7,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]

# ── Tooling configuration (DEC-022: per-language native testing) ──

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
# Frozen Python reference broker is preserved read-only; do not lint.
extend-exclude = ["sandbox/reference"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations (public APIs)
    "D",    # pydocstyle
]
ignore = [
    "D100",  # missing docstring in public module (enforced selectively)
    "D104",  # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]  # relax annotations and docstrings in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src", "tests"]
# Frozen Python reference broker is preserved read-only; do not type-check.
exclude = ["^sandbox/reference/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
